--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,167 +2,211 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Spring Boot Naver Login Test</title>
+    <title>OAuth2 + JWT 통합 테스트 대시보드</title>
     <style>
-        /* ✅ 선택: 로딩 표시용 */
+        body {
+          font-family: 'Segoe UI', sans-serif;
+          text-align: center;
+          margin-top: 60px;
+          color: #333;
+        }
+        h1 { font-size: 26px; margin-bottom: 20px; }
+        .btn {
+          display: inline-block;
+          width: 220px;
+          padding: 12px 16px;
+          margin: 6px;
+          border-radius: 6px;
+          border: none;
+          font-size: 15px;
+          cursor: pointer;
+          transition: transform 0.1s ease-in-out;
+          color: #fff;
+        }
+        .btn:hover { transform: scale(1.03); }
+
+        .google   { background-color: #DB4437; }
+        .naver    { background-color: #1EC800; }
+        .kakao    { background-color: #FEE500; color: #3C1E1E; }
+        .facebook { background-color: #1877F2; }
+        .action   { background-color: #444; }
+        .info     { background-color: #555; }
+        .gpt      { background-color: #8E44AD; }
+
         #loading { display:none; font-size:14px; color:#555; }
-        .btn { font-size:16px; padding:10px; margin-right:8px; }
+        .status {
+          margin-top: 40px;
+          font-size: 14px;
+          color: #555;
+          white-space: pre-line;
+        }
+        pre {
+          text-align: left;
+          display: inline-block;
+          background: #f6f6f6;
+          border-radius: 8px;
+          padding: 16px;
+          width: 80%;
+          max-width: 800px;
+          overflow-x: auto;
+        }
     </style>
 </head>
 <body>
 
-<h1>Naver + JWT 로그인 테스트 페이지</h1>
+<h1>OAuth2 로그인 테스트 (Naver)</h1>
 
-<a href="/oauth2/authorization/naver">
-    <button style="font-size: 20px; padding: 10px;">네이버로 로그인 (먼저 하세요)</button>
-</a>
+<div>
+    <a href="/oauth2/authorization/naver"><button class="btn naver">Naver 로그인</button></a>
+</div>
 
-<hr>
+<hr style="margin: 30px 0; width: 70%;">
 
-<h2>API 테스트</h2>
-<button onclick="fetchUserInfo()" class="btn">내 정보 조회하기 (Access Token 사용)</button>
-<button onclick="updateUserName()" class="btn">닉네임 변경 (PATCH)</button>
-<button onclick="logout()" class="btn">로그아웃</button>
+<div>
+    <button class="btn action" onclick="reissueToken()">🔄 토큰 재발급</button>
+    <button class="btn action" onclick="logout()">🚪 로그아웃</button>
+</div>
 
-<!-- ✅ 추가: 리뷰 요약 -->
-<h2>리뷰 요약 (toiletId=1 고정)</h2>
-<button onclick="summarizeToilet1()" class="btn">요약 생성하기</button>
-<span id="loading">요약 생성 중...</span>
+<hr style="margin: 30px 0; width: 70%;">
 
-<h3>결과:</h3>
+<div>
+    <button class="btn info" onclick="fetchUserInfo()">👤 내 정보 조회</button>
+    <button class="btn info" onclick="updateUserName()">✏️ 닉네임 변경</button>
+</div>
+
+<hr style="margin: 30px 0; width: 70%;">
+
+<div>
+    <button class="btn gpt" onclick="summarizeToilet1()">🧠 리뷰 요약 (toiletId=1)</button>
+    <span id="loading">요약 생성 중...</span>
+</div>
+
+<div class="status" id="status"></div>
 <pre id="result"></pre>
 
 <script>
-    window.onload = function() {
-        const accessToken = localStorage.getItem('accessToken');
-        const refreshToken = localStorage.getItem('refreshToken');
-        if (accessToken) {
-            document.getElementById('result').innerText =
-                '로그인 상태입니다.\n\n' +
-                'Access Token: ' + accessToken.substring(0, 30) + '...\n' +
-                'Refresh Token: ' + (refreshToken ? refreshToken.substring(0, 30) + '...' : '없음');
+    window.onload = showStatus;
+
+    function showStatus() {
+      const accessToken = localStorage.getItem('accessToken');
+      const refreshToken = localStorage.getItem('refreshToken');
+      const statusEl = document.getElementById('status');
+
+      if (accessToken && refreshToken) {
+        statusEl.innerText =
+          '✅ 로그인 상태\n\n' +
+          'Access Token: ' + accessToken.substring(0, 25) + '...\n' +
+          'Refresh Token: ' + refreshToken.substring(0, 25) + '...';
+      } else {
+        statusEl.innerText = '🔒 현재 로그아웃 상태입니다.';
+      }
+    }
+
+    // === 토큰 재발급 ===
+    async function reissueToken() {
+      const refreshToken = localStorage.getItem('refreshToken');
+      if (!refreshToken) return alert('Refresh Token이 없습니다. 먼저 로그인하세요.');
+
+      try {
+        const res = await fetch('/auth/refresh', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ refreshToken })
+        });
+        const result = await res.json();
+
+        if (res.ok && result.success) {
+          localStorage.setItem('accessToken', result.data.accessToken);
+          localStorage.setItem('refreshToken', result.data.refreshToken);
+          alert('🔄 토큰 재발급 성공!');
+          showStatus();
         } else {
-            document.getElementById('result').innerText = '로그아웃 상태입니다.';
+          alert('❌ 재발급 실패: ' + result.message);
         }
+      } catch (err) {
+        console.error(err);
+        alert('재발급 중 오류 발생');
+      }
     }
 
-    async function fetchUserInfo() {
-        const accessToken = localStorage.getItem('accessToken');
-        if (!accessToken) {
-            alert('먼저 로그인 버튼을 눌러 로그인을 완료해주세요.');
-            return;
-        }
-        try {
-            const response = await fetch('/user/profile', {   // ✅ 프로필 조회
-                method: 'GET',
-                headers: { 'Authorization': 'Bearer ' + accessToken }
-            });
-            const result = await response.json();
-            document.getElementById('result').innerText = JSON.stringify(result, null, 2);
-        } catch (error) {
-            console.error('Error fetching user info:', error);
-            document.getElementById('result').innerText = '정보 조회 중 에러 발생!';
-        }
-    }
-
-    async function updateUserName() {
-        const accessToken = localStorage.getItem('accessToken');
-        if (!accessToken) {
-            alert('먼저 로그인하세요.');
-            return;
-        }
-
-        const newName = prompt("새로운 닉네임을 입력하세요 (2~10자):");
-        if (!newName) return;
-
-        try {
-            const response = await fetch('/user/profile/name', {   // ✅ 이름 변경
-                method: 'PATCH',
-                headers: {
-                    'Authorization': 'Bearer ' + accessToken,
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ name: newName })
-            });
-
-            const result = await response.json();
-            document.getElementById('result').innerText = JSON.stringify(result, null, 2);
-        } catch (error) {
-            console.error('Error updating name:', error);
-            document.getElementById('result').innerText = '닉네임 변경 중 에러 발생!';
-        }
-    }
-
+    // === 로그아웃 ===
     async function logout() {
-        const accessToken = localStorage.getItem('accessToken');
-        if (!accessToken) {
-            alert('이미 로그아웃 상태입니다.');
-            return;
-        }
-        try {
-            await fetch('/auth/logout', {
-                method: 'POST',
-                headers: { 'Authorization': 'Bearer ' + accessToken }
-            });
-            localStorage.removeItem('accessToken');
-            localStorage.removeItem('refreshToken');
-            alert('로그아웃 되었습니다.');
-            window.location.reload();
-        } catch (error) {
-            console.error('Error during logout:', error);
-        }
+      const accessToken = localStorage.getItem('accessToken');
+      if (!accessToken) return alert('이미 로그아웃 상태입니다.');
+
+      try {
+        await fetch('/auth/logout', {
+          method: 'POST',
+          headers: { 'Authorization': 'Bearer ' + accessToken }
+        });
+        localStorage.clear();
+        alert('🚪 로그아웃 완료!');
+        showStatus();
+      } catch (err) {
+        console.error(err);
+      }
     }
 
-    // ✅ 추가: OpenAI 요약 호출 (toiletId=1 고정)
+    // === 내 정보 조회 ===
+    async function fetchUserInfo() {
+      const token = localStorage.getItem('accessToken');
+      if (!token) return alert('로그인 후 이용하세요.');
+      const res = await fetch('/user/profile', {
+        headers: { 'Authorization': 'Bearer ' + token }
+      });
+      const data = await res.json();
+      document.getElementById('result').innerText = JSON.stringify(data, null, 2);
+    }
+
+    // === 닉네임 변경 ===
+    async function updateUserName() {
+      const token = localStorage.getItem('accessToken');
+      if (!token) return alert('로그인 후 이용하세요.');
+      const newName = prompt('새 닉네임 (2~10자):');
+      if (!newName) return;
+
+      const res = await fetch('/user/profile/name', {
+        method: 'PATCH',
+        headers: {
+          'Authorization': 'Bearer ' + token,
+          'Content-Type': 'application/json'
+        },
+        body: JSON.stringify({ name: newName })
+      });
+      const data = await res.json();
+      document.getElementById('result').innerText = JSON.stringify(data, null, 2);
+    }
+
+    // === 리뷰 요약 ===
     async function summarizeToilet1() {
-        const accessToken = localStorage.getItem('accessToken');
-        if (!accessToken) {
-            alert('먼저 네이버 로그인 후 토큰을 발급받아 주세요.');
-            return;
+      const token = localStorage.getItem('accessToken');
+      if (!token) return alert('로그인 후 이용하세요.');
+
+      const loader = document.getElementById('loading');
+      const resultEl = document.getElementById('result');
+      loader.style.display = 'inline';
+
+      try {
+        const res = await fetch('/toilet/1/reviews/summary', {
+          headers: { 'Authorization': 'Bearer ' + token }
+        });
+        const data = await res.json();
+
+        if (res.ok && data.success && data.data?.summary) {
+          resultEl.innerText =
+            `[요약 성공 ✅]\n${data.data.summary}\n\n== Raw ==\n` +
+            JSON.stringify(data, null, 2);
+        } else {
+          resultEl.innerText = JSON.stringify(data, null, 2);
         }
-
-        const loader = document.getElementById('loading');
-        const resultEl = document.getElementById('result');
-
-        try {
-            loader.style.display = 'inline';
-
-            // 컨트롤러 매핑: GET /toilet/{toiletId}/reviews/summary
-            const response = await fetch('/toilet/1/reviews/summary', {
-                method: 'GET',
-                headers: { 'Authorization': 'Bearer ' + accessToken }
-            });
-
-            const payload = await response.json();
-
-            // 표준 ApiResponse 포맷 출력
-            // 성공이면 요약만 보기 쉽게 강조
-            if (response.ok && payload && payload.success && payload.data && payload.data.summary) {
-                resultEl.innerText =
-`[요약 성공 ✅]
-${payload.data.summary}
-
-== Raw ==
-${JSON.stringify(payload, null, 2)}`;
-            } else {
-                resultEl.innerText = JSON.stringify(payload, null, 2);
-                if (response.status === 404) {
-                    alert('해당 화장실에 리뷰가 없습니다.');
-                } else if (response.status === 401) {
-                    alert('인증이 필요합니다. 다시 로그인해 주세요.');
-                }
-            }
-        } catch (e) {
-            console.error(e);
-            resultEl.innerText = '요약 생성 중 에러가 발생했습니다.';
-        } finally {
-            loader.style.display = 'none';
-        }
+      } catch (err) {
+        console.error(err);
+        resultEl.innerText = '요약 중 오류 발생';
+      } finally {
+        loader.style.display = 'none';
+      }
     }
 </script>
 
 </body>
 </html>
-
-
-
