--- a/src/main/resources/static/auth/callback.html
+++ b/src/main/resources/static/auth/callback.html
@@ -5,7 +5,7 @@
     <title>OAuth2 Callback</title>
 </head>
 <body>
-Processing...
+<p>Processing...</p>
 <script>
     // 페이지가 로드되자마자 실행
     window.onload = function() {
@@ -19,12 +19,12 @@ Processing...
             localStorage.setItem('accessToken', accessToken);
             localStorage.setItem('refreshToken', refreshToken);
 
-            // 3. 저장이 완료되면 메인 페이지로 리다이렉트
-            window.location.href = '/';
+            // 3. 저장 완료 후 메인 페이지로 리다이렉트
+            window.location.href = '/';  // 메인 페이지 URL로 리다이렉트
         } else {
-            // 토큰이 없는 경우 에러 처리 또는 로그인 페이지로 리다이렉트
-            alert('로그인에 실패하였습니다.');
-            window.location.href = '/';
+            // 토큰이 없는 경우 에러 처리
+            alert('로그인에 실패하였습니다. 다시 시도해주세요.');
+            window.location.href = '/';  // 메인 페이지로 리다이렉트 (로그인 페이지가 아닌)
         }
     };
 </script>
