--- a/src/main/resources/static/auth/callback.html
+++ b/src/main/resources/static/auth/callback.html
@@ -18,23 +18,10 @@
             localStorage.setItem('accessToken', accessToken);
             localStorage.setItem('refreshToken', refreshToken);
 
-            // 3. Authorization 헤더에 Bearer 토큰 추가
-            const headers = new Headers();
-            headers.append("Authorization", "Bearer " + accessToken);
-
-            // 4. fetch로 API 요청 보내기
-            fetch("http://3.36.148.255:8080/your-api-endpoint", {
-                method: 'GET',
-                headers: headers
-            })
-            .then(response => response.json())
-            .then(data => console.log(data))
-            .catch(error => console.error('Error:', error));
-
-            // 5. 저장이 완료되면 메인 페이지로 리다이렉트
+            // 3. 토큰 저장 후 메인 페이지로 리다이렉트
             window.location.href = '/';  // 메인 페이지 URL로 리다이렉트
         } else {
-            // 6. 토큰이 없는 경우 에러 처리
+            // 4. 토큰이 없는 경우 에러 처리
             alert('로그인에 실패하였습니다. 다시 시도해주세요.');
             window.location.href = '/';  // 메인 페이지로 리다이렉트
         }
@@ -42,4 +29,5 @@
 </script>
 </body>
 </html>
+
 
