--- a/src/main/resources/static/auth/callback.html
+++ b/src/main/resources/static/auth/callback.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>OAuth2 Callback</title>
+    <title>OAuth2 Callback Page</title>
 </head>
 <body>
 <p>Processing...</p>
